Fix gallery cover sometimes stretched

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -48,3 +48,7 @@ a:hover {
 .pager {
 	text-align: center;
 }
+
+img.cover, .cover img {
+	object-fit: contain;
+}
