--- a/app/static/css/galleries.css
+++ b/app/static/css/galleries.css
@@ -50,7 +50,6 @@
 
 .gallery-entry .cover {
 	width: 100%;
-	object-fit: contain;
 }
 
 .gallery-entry .super-tags {
